--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:uaM2UWrC7w5uFT/Z1+cvMJfbKM0t7lG/OxhgiwLgGjM=
+APP_KEY=base64:EGbsHiqVpa3LKGomqSjROzp63+NbTWQoJdyw5UTy1m8=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=penduduk_montalat
+DB_DATABASE=siswa
 DB_USERNAME=root
 DB_PASSWORD=
 
