--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "tailwindcss": "^3.0.18"
     },
     "dependencies": {
+        "signature_pad": "^4.1.5",
         "turbolinks": "^5.2.0"
     }
 }
